FIXED : loved and lovers image stretched ;

--- a/static/styles/mdp.scss
+++ b/static/styles/mdp.scss
@@ -220,9 +220,10 @@ main {
       position:absolute; top:0; left:0; bottom:0; right:0;
       width:100%; height: 100%; max-height: 100%;
     }
-    img {
+    circle-img {
       width:100%;
-      height:100%; min-height: 100%;
+      //height:100%;
+      //min-height: 100%;
     }
   }
 
